# RepositorioDeAulas

./: .gitattributes  .gitignore  README.md  atividade_teste.html  docker-compose.prod.yml  docker-compose.yml  engine.js  example.env   example.secret.json  gerador.html  index.html  settings.json
.github/workflows/: main.yml
backend/: .gitignore  Cargo.toml
backend/database/data/: data.mdb  lock.mdb
backend/database/init/: initial_data.json
backend/src/: mailer.rs  main.rs
backend/src/database/: database.rs  init.rs  mod.rs  models.rs
backend/templates/: default.txt  envio_atividades.html
conf/: docker-entrypoint.sh  nginx.conf  nginx.conf.template
gerador/: controller.js  index.html  style.css
global/: alert-modals.js  global.css  mailer.js  slide.css
turmas/estatistica/atividades/: Probabilidade_Condicional_Independencia.html  aula_patrick_extra.html  introducao.html  introducao_python.html  matplotlib01.html  matplotlib02.html  provaA.html  provaB.html  provaC.html  python_probabilidade.html
turmas/estatistica/aulas/: Probabilidade_Condicional_Independencia.md  Uniao_Intersecao.md  desviopadrao.html  importando_blibiotecas_python.html  importando_blibiotecas_python.md  introducao_python.html  listas_parte02.md  matplotlib_parte01.md  matplotlib_parte02.md  media_moda_mediana.html  probabilidade_python.md  try_expection_python.html  try_expection_python.md  vetores_array.html
turmas/logica/atividades/: conectivos_logicos.html  estrutura_interpretador_compilador_modularizacao_vetores_matrizes.html  introducao_algoritmos.html  leis_logica.html  (+2 more)
(+37 files in other folders)
